# bs2stampbc

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  Makefile  README.md
.github/workflows/: ci.yml
cmake/: coverage.cmake  dev-mode.cmake  external-lib.cmake  install-rules.cmake  sources.cmake  variables.cmake
include/stampbc/: main.hpp
include/stampbc-lib/: compiler.hpp  defs.hpp  lib.hpp  loader.hpp  project.hpp
src/stampbc/: main.cpp
src/stampbc-lib/: compiler.cpp  lib.cpp  loader.cpp  project.cpp
test/: CMakeLists.txt
test/resources/: test.bs2
test/src/: stampbc_test.cpp
